Changed Componentinterface and started adding builder for entity