@@ -27,6 +27,18 @@ configure(subprojects) {
   }
 }
 
+tasks.withType(JavaCompile).configureEach {
+  options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(Test).configureEach {
+  jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec).configureEach {
+  jvmArgs += "--enable-preview"
+}
+
 subprojects {
   version = '1.0.0'
   ext.appName = 'SpaceGame'
